# superimposition_of_passive_taskspace_controllers

./: CMakeLists.txt  README.md  StackOfPassiveControllersController.xml  dependencies.rosinstall  package.xml
.deprecated/: 1euro_filter.hpp
.github/workflows/: ros1_ci.yml
config/: fic_node.yaml  figure_eight_ik.xml  ik_gazebo.xml  lwr.srdf  lwr_control.yaml  rqt_multiplot.xml  rviz.rviz
include/stack_of_passive_controllers_controller/: fractal_impedance_controller.hpp  stack_of_task_space_controllers.hpp
launch/: load_lwr_robot_description.launch  lwr_fic_node.launch  lwr_gazebo.launch  lwr_hw_ros_control.launch  lwr_ik.launch  lwr_robot.launch  spawn_box.launch
resources/: obstacle.sdf  obstacle.stl  obstacle.urdf
scripts/: figure_eight_ik  go_to_start  go_to_start_trajectory  line_ik  publish_obstacle_marker_to_rviz  reset_joint_stiffness  send_current_as_goal  switch_to_stack_of_fic
src/: 1euro_filter.hpp  StackOfPassiveControllersController.cpp  stack_of_fic_node.cpp  stack_of_task_space_controllers.cpp
stack_of_task_space_controllers_core/: CMakeLists.txt  package.xml
stack_of_task_space_controllers_core/include/stack_of_task_space_controllers_core/: fractal_impedance_controller.hpp  stack_of_task_space_controllers.hpp
stack_of_task_space_controllers_core/src/: stack_of_task_space_controllers.cpp
stack_of_task_space_controllers_kuka_lwr/: CMakeLists.txt  README.md  package.xml
stack_of_task_space_controllers_kuka_lwr/config/: fic_node.yaml  figure_eight_ik.xml  lwr_control.yaml  rqt_multiplot_qdot.xml  rviz.rviz
stack_of_task_space_controllers_kuka_lwr/launch/: load_lwr_robot_description.launch  lwr_fic_node.launch  lwr_gazebo.launch  lwr_hw_ros_control.launch  lwr_ik.launch  lwr_robot.launch
stack_of_task_space_controllers_kuka_lwr/resources/: obstacle.dae  obstacle.sdf  obstacle.urdf
stack_of_task_space_controllers_kuka_lwr/scripts/: figure_eight_ik  go_to_start  go_to_start_trajectory  interactive_controller_targets  line_ik  publish_obstacle_marker_to_rviz  switch_to_position_controller
stack_of_task_space_controllers_kuka_lwr/src/: stack_of_fic_node.cpp
stack_of_task_space_controllers_rocoma/: CMakeLists.txt  anymal_gain_tuning_wip.yaml  package.xml  rocoma_plugin.xml
stack_of_task_space_controllers_rocoma/config/: anymal_stack_of_fic.yaml
stack_of_task_space_controllers_rocoma/include/stack_of_task_space_controllers_rocoma/: stack_of_task_space_controllers_rocoma.hpp
stack_of_task_space_controllers_rocoma/src/: rocoma_plugin.cpp  stack_of_task_space_controllers_rocoma.cpp
stack_of_task_space_controllers_ros_control/: CMakeLists.txt  StackOfTaskSpaceControllersController.xml  package.xml
stack_of_task_space_controllers_ros_control/src/: stack_of_task_space_controllers_ros_control.cpp
