<?xml version="1.0"?>
<package format="2">
  <name>stack_of_passive_controllers_controller</name>
  <version>0.0.0</version>
  <description>The stack_of_passive_controllers_controller package</description>

  <maintainer email="wolfgang.merkt@ed.ac.uk">Wolfgang Merkt</maintainer>
  <author email="wolfgang.merkt@ed.ac.uk">Wolfgang Merkt</author>
  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/stack_of_passive_controllers_controller</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>ros_control</build_depend>
  <build_export_depend>control_toolbox</build_export_depend>
  <build_export_depend>ros_control</build_export_depend>
  <exec_depend>control_toolbox</exec_depend>
  <exec_depend>ros_control</exec_depend>

  <!-- <depend>angles</depend> -->
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>joint_limits_interface</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>urdf</depend>
  <depend>eigen</depend>
  <depend>exotica_core</depend>
  <depend>ddynamic_reconfigure</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <controller_interface plugin="${prefix}/StackOfPassiveControllersController.xml"/>
  </export>
</package>
