<?xml version="1.0"?>
<package format="2">
  <name>stack_of_task_space_controllers_rocoma</name>
  <version>1.0.0</version>
  <description>Controller employing the Stack of Task Space Controllers framework.</description>
  <maintainer email="wolfgang@robots.ox.ac.uk">Wolfgang Merkt</maintainer>
  <license>Proprietary</license>
  <author>Wolfgang Merkt</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>anymal_description</depend>
  <depend>anymal_model</depend>
  <depend>anymal_roco</depend>
  <depend>message_generation</depend>
  <depend>message_logger</depend>
  <depend>message_runtime</depend>
  <depend>realtime_tools</depend>
  <depend>rocoma_plugin</depend>
  <depend>signal_logger</depend>
  <depend>std_msgs</depend>
  <depend>stack_of_task_space_controllers_core</depend>

  <export>
    <rocoma_plugin plugin="${prefix}/rocoma_plugin.xml" />
  </export>
</package>
